force-app/main/default/objects/Sbapr23object1__c/Sbapr23object1__c.object-meta.xml
<CustomObject>
    <label>Sbapr23object1</label>
    <nameField>
        <label>Sbapr23object1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sbapr23object1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>