force-app/main/default/objects/Sbapr23object1__c/fields/Event_type_sai__c.field-meta.xml
<CustomField>
    <fullName>Event_type_sai__c</fullName>
    <label>Event type sai</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TM Discussion</fullName>
            </value>
            <value>
                <fullName>Referral Event</fullName>
            </value>
            <value>
                <fullName>Practice Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>