force-app/main/default/objects/Sbapr23object1__c/fields/f1__c.field-meta.xml
<CustomField>
    <fullName>f1__c</fullName>
    <label>f1</label>
    <length>7</length>
    <type>Text</type>
</CustomField>