force-app/main/default/objects/Sbapr23object1__c/fields/pf1__c.field-meta.xml
<CustomField>
    <fullName>pf1__c</fullName>
    <label>pf1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test1</valueSetName>
    </valueSet>
</CustomField>